# GravityPaint

./: .gitignore  .gitmodules  AGENT_NOTES.md  CMakeLists.txt  LICENSE  PROJECT_STATUS.md  README.md  build-mingw.bat  build.bat
.github/workflows/: deploy-pages.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/gravitypaint/game/: GravityPaintActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
assets/: README.md
assets/music/: README.md
assets/sounds/: README.md
include/GravityPaint/: Constants.h  Types.h
include/GravityPaint/audio/: AudioManager.h
include/GravityPaint/core/: Game.h  GameState.h  InputManager.h  ResourceManager.h
include/GravityPaint/graphics/: Camera.h  ParticleSystem.h  Renderer.h
include/GravityPaint/level/: Level.h  LevelManager.h  Objective.h
include/GravityPaint/physics/: DeformableSurface.h  GravityField.h  PhysicsObject.h  PhysicsWorld.h
include/GravityPaint/ui/: HUD.h  Menu.h
include/Vectoria/: Constants.h  Types.h
include/Vectoria/audio/: AudioManager.h
include/Vectoria/core/: Game.h  GameState.h  InputManager.h  ResourceManager.h
include/Vectoria/graphics/: Camera.h  ParticleSystem.h  Renderer.h
include/Vectoria/level/: Level.h  LevelManager.h  Objective.h
include/Vectoria/physics/: DeformableSurface.h  GravityField.h  PhysicsObject.h  PhysicsWorld.h
include/Vectoria/ui/: HUD.h  Menu.h
ios/: Info.plist  LaunchScreen.storyboard
legal/: DISCLAIMER.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
src/: main.cpp
src/audio/: AudioManager.cpp
src/core/: Game.cpp  GameState.cpp  InputManager.cpp  ResourceManager.cpp
src/graphics/: Camera.cpp  ParticleSystem.cpp  Renderer.cpp
src/level/: Level.cpp  LevelManager.cpp  Objective.cpp
src/physics/: DeformableSurface.cpp  GravityField.cpp  PhysicsObject.cpp  PhysicsWorld.cpp
src/ui/: HUD.cpp  Menu.cpp
store/: APP_STORE_LISTING.md  ICON_SPECS.md  RELEASE_CHECKLIST.md
web/: build-web.bat  build-web.sh  shell.html
